cleaned up and sums individual market caps if not total market cap is provided

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@
 russellcapping/__pycache__/__init__.cpython-36.pyc
 russellcapping/__pycache__/capping.cpython-36.pyc
 russellcapping/.DS_Store
+russellcapping/capping_alt.py
 .idea/workspace.xml
